fixed start time

--- a/index.html
+++ b/index.html
@@ -2,29 +2,31 @@
 <title>Video/Canvas Demo 1</title>
 <script>
     function draw(v,c,bc,w,h) {
+        if(v.paused || v.ended) return false;
+
         // don't check pixels during introduction
-        if(v.paused || v.ended || v.currentTime < 13) return false;
+        if (v.currentTime >= 13) {}
+            // First, draw it into the backing canvas
+            bc.drawImage(v,0,0,w,h);
+            // Grab the pixel data from the backing canvas
+            var idata = bc.getImageData(0,0,w,h);
+            var data = idata.data;
 
-        // First, draw it into the backing canvas
-        bc.drawImage(v,0,0,w,h);
-        // Grab the pixel data from the backing canvas
-        var idata = bc.getImageData(0,0,w,h);
-        var data = idata.data;
-
-        // Loop through the pixels, turning them grayscale
-        for(var i = 0; i < data.length; i+=4) {
-            var r = data[i];
-            var g = data[i+1];
-            var b = data[i+2];
-            var brightness = (3*r+4*g+b)>>>3;
-            data[i] = brightness;
-            data[i+1] = brightness;
-            data[i+2] = brightness;
+            // Loop through the pixels, turning them grayscale
+            for(var i = 0; i < data.length; i+=4) {
+                var r = data[i];
+                var g = data[i+1];
+                var b = data[i+2];
+                var brightness = (3*r+4*g+b)>>>3;
+                data[i] = brightness;
+                data[i+1] = brightness;
+                data[i+2] = brightness;
+            }
+            idata.data = data;
+            // Draw the pixels onto the visible canvas
+            c.putImageData(idata,0,0);
+            // Start over!
         }
-        idata.data = data;
-        // Draw the pixels onto the visible canvas
-        c.putImageData(idata,0,0);
-        // Start over!
         setTimeout(function(){ draw(v,c,bc,w,h); }, 0);
     }
 
