--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     function draw(v,c,bc,w,h) {
         if(v.paused || v.ended) return false;
 
-        // don't check pixels during introduction
-        if (v.currentTime >= 13) {
+        // don't check pixels during introduction and half-speed run
+        if (v.currentTime >= 13  && v.currentTime <= 106) {
             // First, draw it into the backing canvas
             bc.drawImage(v,0,0,w,h);
             // Grab the pixel data from the backing canvas
