--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <title>Video/Canvas Demo 1</title>
 <script>
+    // video key colors ~ (r,g,b): taken from middle of key in a screenshot of video
+    // left hand white key: (110, 160, 202)
+    // left hand black key: (50, 98, 155)
+    // right hand white key: (138, 227, 51)
+    // right hand black key: (83, 156, 15)
+
     function draw(v,c,bc,w,h) {
         if(v.paused || v.ended) return false;
 
@@ -17,10 +23,17 @@
                 var r = data[i];
                 var g = data[i+1];
                 var b = data[i+2];
-                var brightness = (3*r+4*g+b)>>>3;
-                data[i] = brightness;
-                data[i+1] = brightness;
-                data[i+2] = brightness;
+
+                // attempt to turn currently played left hand white keys into red
+                if (Math.abs(r - 110) <= 10 && Math.abs(g - 160) <= 10 && Math.abs(b - 202) <= 10) {
+                    data[i] = 255;
+                    data[i+1] = 0;
+                    data[i+2] = 0;
+                }
+                //var brightness = (3*r+4*g+b)>>>3;
+                //data[i] = brightness;
+                //data[i+1] = brightness;
+                //data[i+2] = brightness;
             }
             idata.data = data;
             // Draw the pixels onto the visible canvas
