--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             // First, draw it into the backing canvas
             bc.drawImage(v,0,0,w,h);
             // Grab the pixel data from the backing canvas
+            console.log(Math.floor(h*0.8));
             var idata = bc.getImageData(0,Math.floor(h*0.8),w,h);
             var data = idata.data;
 
