--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             if (test) {
                 console.log(expectedPixels);
                 console.log(actualPixels);
+                console.log("Test");
                 test = false;
             }
 
