mad standard sheet

--- a/sheet.html
+++ b/sheet.html
@@ -1,5 +1,83 @@
 <!DOCTYPE html>
+<head>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
+</head>
 <title>Sheet/Canvas Demo 1</title>
-<canvas id="myCanvas" width="850" height="1100"
-style="border:1px solid #000000;">
-</canvas>
+<html>
+	<body>
+
+		<canvas id = "myCanvas" width = "1700" height = "2200"
+			style = "border:1px solid #000000;">
+		</canvas>
+
+		<script>
+			var c = document.getElementById("myCanvas");
+			var ctx = c.getContext("2d");
+
+			var img1 = new Image();
+			img1.src = "TrebleClef.png";
+			var img2 = new Image();
+			img2.src = "BassClef.png";
+			var img3 = new Image();
+			img3.src = "Brace.png";
+
+			img1.onload = function () {
+			    for(var j = 75; j < 2100; j += 428){
+				    ctx.drawImage(img1,104,j,44,105);
+				}
+			}
+
+			img3.onload = function () {
+			    for(var l = 95; l < 2100; l += 428){
+				    ctx.drawImage(img3,78,l,21,179);
+				}
+			}
+			
+			img2.onload = function () {
+			    for(var k = 217; k < 2200; k += 428){
+				    ctx.drawImage(img2,106,k,34,40);
+				}
+			    
+				var x1 = 100;
+				var x2 = 1600;
+				var skip = false;
+
+				//DRAW LINES
+				for(var y = 100; y < 2099; y += 52){
+					for(var i = 1; i < 6; i++){
+						ctx.moveTo(x1, y);
+						ctx.lineTo(x2, y);
+						ctx.stroke();
+						y += 13;
+					}
+					if(skip){
+						ctx.moveTo(x1, y - 13);
+						ctx.lineTo(x1, y - 182);
+						ctx.stroke();
+						ctx.moveTo(x1 + 1, y - 13);
+						ctx.lineTo(x1 + 1, y - 182);
+						ctx.stroke();
+						ctx.moveTo(x2, y - 13);
+						ctx.lineTo(x2, y - 182);
+						ctx.stroke();
+						ctx.moveTo(x2 - 1, y - 13);
+						ctx.lineTo(x2 - 1, y - 182);
+						ctx.stroke();
+						ctx.moveTo(x2 - 2, y - 13);
+						ctx.lineTo(x2 - 2, y - 182);
+						ctx.stroke();
+						y += 194;
+						skip = false;
+					} else {
+						skip = true;
+					}
+				}
+			}
+
+			//DRAW THE TITLE
+			//ctx.font = "40pt times new roman";
+			//ctx.fillText(title,425,50);
+		</script>
+	</body>
+</html>
