fixed image sources

--- a/src/static/html/sheet.html
+++ b/src/static/html/sheet.html
@@ -122,11 +122,11 @@
 
 			function createPage(){
 				var img1 = new Image();
-				img1.src = "TrebleClef.png";
+				img1.src = "../../assets/images/TrebleClef.png";
 				var img2 = new Image();
-				img2.src = "BassClef.png";
+				img2.src = "../../assets/images/BassClef.png";
 				var img3 = new Image();
-				img3.src = "Brace.png";
+				img3.src = "../../assets/images/Brace.png";
 
 				//Place Images
 				img1.onload = function () {
