--- a/src/static/html/index.html
+++ b/src/static/html/index.html
@@ -82,9 +82,9 @@
 
 <canvas id="c"></canvas>
 <video id="v" controls loop>
-    <source src="../../assets/videos/avici.webm" type="video/webm">
-    <source src="../../assets/videos/avici.ogg" type="video/ogg">
-    <source src="../../assets/videos/avici.mp4" type="video/mp4">
+    <source src="assets/videos/avici.webm" type="video/webm">
+    <source src="assets/videos/avici.ogg" type="video/ogg">
+    <source src="assets/videos/avici.mp4" type="video/mp4">
 </video>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
