--- a/index.html
+++ b/index.html
@@ -10,54 +10,6 @@
     var test = true;
     var KEY_OFFSET = 10; // pixels from top of keys
 
-    function draw(v,c,bc,w,h) {
-        if(v.paused || v.ended) return false;
-
-        // don't check pixels during introduction and half-speed run
-        if (v.currentTime >= 13  && v.currentTime <= 106) {
-            // First, draw it into the backing canvas
-            bc.drawImage(v,0,0,w,h);
-            // Grab the pixel data from the backing canvas
-            var idata = bc.getImageData(0,Math.floor(h*0.8) + KEY_OFFSET, w, Math.floor(h*0.8) + KEY_OFFSET + 1);
-            var data = idata.data;
-
-            var expectedPixels = Math.floor(w * h);
-            var actualPixels = data.length;
-            if (test) {
-                console.log(expectedPixels);
-                console.log(actualPixels);
-                test = false;
-            }
-
-            // Loop through the pixels, turning them grayscale
-            for(var i = 0; i < data.length; i+=4) {
-                var r = data[i];
-                var g = data[i+1];
-                var b = data[i+2];
-
-                // attempt to turn currently played left hand white keys into red
-                if (Math.abs(r - 110) <= 20 && Math.abs(g - 160) <= 20 && Math.abs(b - 202) <= 20) {
-                    var x = (i / 4) % w;
-                    var y = Math.floor((i / 4.0) / w);
-                    console.log(x);
-
-                    data[i] = 255;
-                    data[i+1] = 0;
-                    data[i+2] = 0;
-                }
-                //var brightness = (3*r+4*g+b)>>>3;
-                //data[i] = brightness;
-                //data[i+1] = brightness;
-                //data[i+2] = brightness;
-            }
-            idata.data = data;
-            // Draw the pixels onto the visible canvas
-            c.putImageData(idata,0,0);
-            // Start over!
-        }
-        setTimeout(function(){ draw(v,c,bc,w,h); }, 0);
-    }
-
     document.addEventListener('DOMContentLoaded', function() {
         var v = document.getElementById('v');
         var canvas = document.getElementById('c');
@@ -78,6 +30,50 @@
             draw(v,context,backcontext,cw,ch);
         }, false);
     });
+
+    function draw(v,c,bc,w,h) {
+        if(v.paused || v.ended) return false;
+
+        // don't check pixels during introduction and half-speed run
+        if (v.currentTime >= 13  && v.currentTime <= 106) {
+            // First, draw it into the backing canvas
+            bc.drawImage(v, 0, 0, w, h);
+            // Grab the pixel data from the backing canvas
+            var idata = bc.getImageData(0, Math.floor(h * 0.8) + KEY_OFFSET, w, 1);
+            var data = idata.data;
+
+            var expectedPixels = Math.floor(w * h);
+            var actualPixels = data.length;
+            if (test) {
+                console.log(expectedPixels);
+                console.log(actualPixels);
+                test = false;
+            }
+
+            // Loop through the pixels, turning them grayscale
+            for(var i = 0; i < data.length; i += 4) {
+                var r = data[i];
+                var g = data[i+1];
+                var b = data[i+2];
+
+                // attempt to turn currently played left hand white keys into red
+                if (Math.abs(r - 110) <= 20 && Math.abs(g - 160) <= 20 && Math.abs(b - 202) <= 20) {
+                    var x = (i / 4) % w;
+                    var y = Math.floor((i / 4.0) / w);
+                    console.log(x);
+
+                    data[i] = 255;
+                    data[i + 1] = 0;
+                    data[i + 2] = 0;
+                }
+            }
+            idata.data = data;
+            // Draw the pixels onto the visible canvas
+            c.putImageData(idata,0,0);
+            // Start over!
+        }
+        setTimeout(function(){ draw(v,c,bc,w,h); }, 0);
+    }
 </script>
 
 <canvas id="c"></canvas>
