--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                 if (Math.abs(r - 110) <= 20 && Math.abs(g - 160) <= 20 && Math.abs(b - 202) <= 20) {
                     var x = (i / 4) % w;
                     var y = Math.floor((i / 4.0) / w);
-                    console.log(x);
 
                     data[i] = 255;
                     data[i + 1] = 0;
@@ -64,7 +63,7 @@
                 } else if (r + g + b >= (255 * 3) - 20) {
                     colors.push('W');
                 } else {
-                    colors.push('NA');
+                    colors.push('N/A');
                 }
 
             }
@@ -73,7 +72,8 @@
             c.putImageData(idata,0,0);
             // Start over!
         }
-        setTimeout(function(){ draw(v,c,bc,w,h); }, 0);
+        console.log(colors);
+        setTimeout(function(){ draw(v, c, bc, w, h); }, 0);
     }
 </script>
 
